--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -12,7 +12,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <!-- CSS MAIN-->
-    <link rel="stylesheet" href="../stilos.css/stilos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body id="body__grid">
     <header class="head">
@@ -34,12 +34,12 @@
     </header>
     <main class="main">
         <section>   
-            <h2 class="t-center text-primary"><strong>NUESTROS SERVICIOS</strong></h2>
-            <p class="text-center text-light">Los benefecios que brindan cada uno de nuestros masajes</p>
-            <div class="accordion container" id="accordionExample">
+            <h2 class="t-center"><strong>NUESTROS SERVICIOS</strong></h2>
+            <p class="text-center">Los benefecios que brindan cada uno de nuestros masajes</p>
+            <div class="accordion container servicio" id="accordionExample">
                 <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button text-bg-primary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <button class="accordion-button collapsed text-bg-primary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                     MASAJES RELAJANTES
                     </button>
                 </h2>
@@ -151,17 +151,19 @@
         </section>
     </main>
     <footer id="footer">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
+        <div class="footer__p">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
+        </div>
         <div class="footer__div">
-            <div class="card">
-                <div class="card-body">
-                  <a href="#head__servicios" class="btn btn-primary">INICIO</a>
-                </div>
+            <div class="car">
+                <button><a href="/index.html" class="text-primary">INICIO</a></button>
             </div>
             <div class="footer__div__a">
-                <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
-                <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
-                <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
+                <ul>
+                    <li><a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a></li>
+                    <li><a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a></li>
+                    <li><a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a></li>  
+                </ul>
             </div>
         </div>    
     </footer>
