--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -12,7 +12,7 @@
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <!-- CSS MAIN-->
-    <link rel="stylesheet" href="../stilos.css/stilos.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body id="body__grid">
     <header class="head">
@@ -50,7 +50,7 @@
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                     </div>
                     <div class="contacto__servicio col-sm-12 col-md-7">
-                        <p>Que de Servicio Buscas</p>
+                        <p>Tipo de Servicio Buscas</p>
                         <span>Consultorio</span>
                         <input type="radio" name="servicio" id="consultario">
                         <span>Domicilio</span>
@@ -66,25 +66,27 @@
                     </div>   
                 </div>
                 <div class="col-sm-12 col-md-5 position-relative animacion">
-                    <div class="position-absolute bottom-50 end-50 d-none d-md-block"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5i2A-6tDBF1YYICOfeWa6GMiCQUav9BLjeQ&usqp=CAU"  alt=""></div>
+                    <div class="position-absolute bottom-50 end-50 d-none d-md-block"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5i2A-6tDBF1YYICOfeWa6GMiCQUav9BLjeQ&usqp=CAU"  alt="foto-contacto"></div>
                 </div>
             </div>           
         </section>
     </main>
     <footer id="footer">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
-            <div class="footer__div">
-                <div class="card">
-                    <div class="card-body">
-                        <a href="#head__contactos" class="btn btn-primary">INICIO</a>
-                    </div>
-                </div>
-                <div class="footer__div__a">
-                    <a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a>
-                    <a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a>
-                    <a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a>
-                </div>
-            </div>    
+        <div class="footer__p">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem alias sed, corporis error nulla a sint explicabo nisi iste voluptate iusto qui, eveniet non? Ab veniam corporis facere ipsam voluptatum!</p>
+        </div>
+        <div class="footer__div">
+            <div class="car">
+                <button><a href="/index.html" class="text-primary">INICIO</a></button>
+            </div>
+            <div class="footer__div__a">
+                <ul>
+                    <li><a href="https://www.instagram.com/invites/contact/?i=11nitxhim9tmo&utm_content=mva9o3m" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384886.png"></a></li>
+                    <li><a href="https://m.facebook.com/login/?locale=es_ES" target="_blank"><img src="https://img.freepik.com/psd-gratis/cuadrado-3d-logotipo-facebook_125540-1565.jpg?w=1060&t=st=1667006348~exp=1667006948~hmac=785f2675f03ae3d8794e5c15474aa77102dce5efa3bf5a95582f412efbc7dd30"></a></li>
+                    <li><a href="https://web.whatsapp.com/" target="_blank"><img src="https://e.rpp-noticias.io/normal/2020/07/01/385338_964362.png"></a></li>  
+                </ul>
+            </div>
+        </div>    
     </footer>
 </body>             
 </html>
